# docs/swagger.yaml
@@ -43,6 +43,26 @@ definitions:
       user_id:
         type: integer
     type: object
+  actions.order:
+    properties:
+      cart_id:
+        type: integer
+      payment_id:
+        type: integer
+      status:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  actions.orderItem:
+    properties:
+      extra_info:
+        type: string
+      order_id:
+        type: integer
+      product_id:
+        type: integer
+    type: object
   actions.payment:
     properties:
       amount:
@@ -220,6 +240,59 @@ definitions:
     - plan_id
     - status
     - user_id
+    type: object
+  models.Order:
+    properties:
+      cart:
+        $ref: '#/definitions/models.Cart'
+        type: object
+      cart_id:
+        type: integer
+      created_at:
+        type: string
+      id:
+        type: integer
+      payment:
+        $ref: '#/definitions/models.Payment'
+        type: object
+      payment_id:
+        type: integer
+      status:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    required:
+    - cart_id
+    - payment_id
+    - status
+    - user_id
+    type: object
+  models.OrderItem:
+    properties:
+      created_at:
+        type: string
+      extra_info:
+        type: string
+      id:
+        type: integer
+      order:
+        $ref: '#/definitions/models.Order'
+        type: object
+      order_id:
+        type: integer
+      product:
+        $ref: '#/definitions/models.Product'
+        type: object
+      product_id:
+        type: integer
+      updated_at:
+        type: string
+    required:
+    - extra_info
+    - order_id
+    - product_id
     type: object
   models.Payment:
     properties:
@@ -1057,6 +1130,261 @@ paths:
       summary: Update a membership by id
       tags:
       - Membership
+  /order-items:
+    get:
+      description: Get all order items
+      operationId: get-all-order-items
+      parameters:
+      - description: limt per page
+        in: query
+        name: limit
+        type: string
+      - description: page number
+        in: query
+        name: page
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.OrderItem'
+            type: array
+      summary: Show all order items
+      tags:
+      - OrderItem
+    post:
+      description: create order items
+      operationId: add-order-item
+      parameters:
+      - description: Order item object
+        in: body
+        name: OrderItem
+        required: true
+        schema:
+          $ref: '#/definitions/actions.orderItem'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.OrderItem'
+      summary: Create order items
+      tags:
+      - OrderItem
+  /order-items/{id}:
+    delete:
+      description: Delete order item by ID
+      operationId: delete-order-items-by-id
+      parameters:
+      - description: OrderItem ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.OrderItem'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Delete a order item
+      tags:
+      - OrderItem
+    get:
+      description: Get order item by ID
+      operationId: get-order-item-by-id
+      parameters:
+      - description: Order item ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.OrderItem'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Show a order item by id
+      tags:
+      - OrderItem
+  /orderItems/{id}:
+    put:
+      description: Update orderItems by ID
+      operationId: update-orderItems-by-id
+      parameters:
+      - description: OrderItem ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: OrderItem
+        in: body
+        name: OrderItem
+        schema:
+          $ref: '#/definitions/actions.orderItem'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.OrderItem'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Update a orderItems by id
+      tags:
+      - OrderItem
+  /orders:
+    get:
+      description: Get all orders
+      operationId: get-all-orders
+      parameters:
+      - description: limt per page
+        in: query
+        name: limit
+        type: string
+      - description: page number
+        in: query
+        name: page
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+      summary: Show all orders
+      tags:
+      - Order
+    post:
+      description: create orders
+      operationId: add-orders
+      parameters:
+      - description: Order object
+        in: body
+        name: Order
+        required: true
+        schema:
+          $ref: '#/definitions/actions.order'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Create orders
+      tags:
+      - Order
+  /orders/{id}:
+    delete:
+      description: Delete orders by ID
+      operationId: delete-orders-by-id
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Delete a orders
+      tags:
+      - Order
+    get:
+      description: Get orders by ID
+      operationId: get-orders-by-id
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Show a orders by id
+      tags:
+      - Order
+    put:
+      description: Update orders by ID
+      operationId: update-orders-by-id
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Order
+        in: body
+        name: Order
+        schema:
+          $ref: '#/definitions/actions.order'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Update a orders by id
+      tags:
+      - Order
   /payments:
     get:
       description: Get all payments
